link_directories(${CMAKE_BINARY_DIR}/controllers/psiswarm_dps)
set(psiswarm_dps_loop_functions_SOURCES psiswarm_dps_loop_functions.cpp)

if(ARGOS_COMPILE_QTOPENGL)
  set(psiswarm_dps_loop_functions_SOURCES
    ${psiswarm_dps_loop_functions_SOURCES}
	psiswarm_dps_qt_user_functions.cpp)
endif(ARGOS_COMPILE_QTOPENGL)

add_library(psiswarm_dps_loop_functions MODULE ${psiswarm_dps_loop_functions_SOURCES})
target_link_libraries(psiswarm_dps_loop_functions
  psiswarm_dps
  argos3core_simulator
  argos3plugin_simulator_dynamics2d
  argos3plugin_simulator_entities
  argos3plugin_simulator_psiswarm
  argos3plugin_simulator_genericrobot
  argos3plugin_simulator_media)

if(ARGOS_COMPILE_QTOPENGL)
target_link_libraries(psiswarm_dps_loop_functions argos3plugin_simulator_qtopengl)
endif(ARGOS_COMPILE_QTOPENGL)
